[gd_scene load_steps=13 format=3 uid="uid://b4heya8wtwyuo"]

[ext_resource type="Script" path="res://src/ui/EditorCanvas.gd" id="1_4dmeu"]
[ext_resource type="PackedScene" uid="uid://b8fewbxafd5xt" path="res://data/scene/ui/PropertyEditor.tscn" id="2_1yhnn"]
[ext_resource type="PackedScene" uid="uid://ip8uhbg31syp" path="res://data/scene/ui/MapSelection.tscn" id="3_b6w4i"]
[ext_resource type="PackedScene" uid="uid://ku7hponrkcnk" path="res://data/scene/ui/ItemChooser.tscn" id="5_noy30"]
[ext_resource type="PackedScene" uid="uid://bhgp5nni0peas" path="res://data/scene/ui/Adjuster.tscn" id="5_umgt3"]
[ext_resource type="Script" path="res://src/ui/DynamicLabel.gd" id="6_aufvl"]
[ext_resource type="PackedScene" uid="uid://dudk6o40fwhnj" path="res://data/scene/ui/LeaveButton.tscn" id="12_nulw5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5nvuj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wv0h4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0rfp5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b8ase"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tfptg"]

[node name="EditorCanvas" type="CanvasLayer"]
script = ExtResource("1_4dmeu")

[node name="WorldClick" type="Button" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/normal = SubResource("StyleBoxEmpty_5nvuj")
theme_override_styles/hover = SubResource("StyleBoxEmpty_wv0h4")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_0rfp5")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_b8ase")
theme_override_styles/focus = SubResource("StyleBoxEmpty_tfptg")

[node name="ToolList" type="HBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -92.5
offset_top = 8.0
offset_right = 92.5
offset_bottom = 56.0
grow_horizontal = 2
theme_override_constants/separation = 0

[node name="EntryScreen" type="Control" parent="."]
custom_minimum_size = Vector2(540, 540)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -270.0
offset_top = -200.0
offset_right = 270.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="EntryScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Menu" type="VBoxContainer" parent="EntryScreen"]
custom_minimum_size = Vector2(308, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -154.0
offset_top = -52.0
offset_right = 154.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="DynamicLabel" type="Label" parent="EntryScreen/Menu"]
layout_mode = 2
text = "Welcome to the world editor!"
script = ExtResource("6_aufvl")
json_text = "ui/editor/welcome"

[node name="Spacer" type="Control" parent="EntryScreen/Menu"]
custom_minimum_size = Vector2(2.08165e-12, 16)
layout_mode = 2

[node name="DynamicLabel2" type="Label" parent="EntryScreen/Menu"]
layout_mode = 2
text = "Controls are always shown at
the bottom.

Choose to load an existing
world, or press \"New world\"
to start with the default
template."
script = ExtResource("6_aufvl")

[node name="Spacer2" type="Control" parent="EntryScreen/Menu"]
custom_minimum_size = Vector2(2.08165e-12, 16)
layout_mode = 2

[node name="MapSelection" parent="EntryScreen/Menu" instance=ExtResource("3_b6w4i")]
layout_mode = 2

[node name="Load" type="Button" parent="EntryScreen/Menu"]
layout_mode = 2
text = "Load existing world"

[node name="Spacer3" type="Control" parent="EntryScreen/Menu"]
custom_minimum_size = Vector2(2.08165e-12, 16)
layout_mode = 2

[node name="New" type="Button" parent="EntryScreen/Menu"]
layout_mode = 2
text = "New world"

[node name="LeftPanel" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(360, 2.08165e-12)
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 86.0
offset_right = 376.0
offset_bottom = -16.0
grow_vertical = 2
theme_override_constants/separation = 16

[node name="PropertyEditor" parent="LeftPanel" instance=ExtResource("2_1yhnn")]
layout_mode = 2

[node name="ItemChooser" parent="LeftPanel" instance=ExtResource("5_noy30")]
layout_mode = 2
size_flags_vertical = 3

[node name="PauseMenu" type="Control" parent="."]
visible = false
custom_minimum_size = Vector2(540, 540)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabContainer" type="TabContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -154.0
offset_top = -238.0
offset_right = 154.0
offset_bottom = 238.0
grow_horizontal = 2
grow_vertical = 2
tab_alignment = 1

[node name="Editor" type="VBoxContainer" parent="PauseMenu/TabContainer"]
custom_minimum_size = Vector2(308, 0)
layout_mode = 2
alignment = 1

[node name="Spacer" type="Control" parent="PauseMenu/TabContainer/Editor"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="LeaveButton" parent="PauseMenu/TabContainer/Editor" instance=ExtResource("12_nulw5")]
layout_mode = 2
text = "Leave Editor"
editor_leave_text = true

[node name="Spacer3" type="Control" parent="PauseMenu/TabContainer/Editor"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="DynamicLabel" type="Label" parent="PauseMenu/TabContainer/Editor"]
layout_mode = 2
text = "Save world"
script = ExtResource("6_aufvl")

[node name="SaveWorldName" type="LineEdit" parent="PauseMenu/TabContainer/Editor"]
layout_mode = 2
placeholder_text = "World name..."

[node name="SaveWorld" type="Button" parent="PauseMenu/TabContainer/Editor"]
layout_mode = 2
text = "Save world"

[node name="TestWorld" type="Button" parent="PauseMenu/TabContainer/Editor"]
self_modulate = Color(1, 2.702, 1, 1)
layout_mode = 2
text = "Save & test world"

[node name="Spacer4" type="Control" parent="PauseMenu/TabContainer/Editor"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="DynamicLabel2" type="Label" parent="PauseMenu/TabContainer/Editor"]
layout_mode = 2
text = "Load world"
script = ExtResource("6_aufvl")

[node name="MapSelection" parent="PauseMenu/TabContainer/Editor" instance=ExtResource("3_b6w4i")]
layout_mode = 2

[node name="Load" type="Button" parent="PauseMenu/TabContainer/Editor"]
layout_mode = 2
text = "Load world"

[node name="Spacer5" type="Control" parent="PauseMenu/TabContainer/Editor"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="World Properties" type="VBoxContainer" parent="PauseMenu/TabContainer"]
visible = false
custom_minimum_size = Vector2(308, 0)
layout_mode = 2
alignment = 1

[node name="DynamicLabel2" type="Label" parent="PauseMenu/TabContainer/World Properties"]
layout_mode = 2
text = "Water"
script = ExtResource("6_aufvl")
json_text = "ui/editor/water"

[node name="Water" type="Button" parent="PauseMenu/TabContainer/World Properties"]
layout_mode = 2
text = "Toggle water"

[node name="WaterHeightAdjuster" parent="PauseMenu/TabContainer/World Properties" instance=ExtResource("5_umgt3")]
layout_mode = 2

[node name="DynamicLabel" parent="PauseMenu/TabContainer/World Properties/WaterHeightAdjuster" index="2"]
text = "Water height: 42"

[node name="DynamicLabel5" type="Label" parent="PauseMenu/TabContainer/World Properties"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.513726)
text = "Water type"
script = ExtResource("6_aufvl")
json_text = "ui/editor/water_type"

[node name="WaterType" type="Button" parent="PauseMenu/TabContainer/World Properties"]
layout_mode = 2
text = "Water"

[node name="Spacer2" type="Control" parent="PauseMenu/TabContainer/World Properties"]
custom_minimum_size = Vector2(2.08165e-12, 32)
layout_mode = 2

[node name="DynamicLabel3" type="Label" parent="PauseMenu/TabContainer/World Properties"]
layout_mode = 2
text = "Environment"
script = ExtResource("6_aufvl")
json_text = "ui/editor/environment"

[node name="Environment" type="Button" parent="PauseMenu/TabContainer/World Properties"]
layout_mode = 2
text = "Sunny"

[node name="Spacer3" type="Control" parent="PauseMenu/TabContainer/World Properties"]
custom_minimum_size = Vector2(2.08165e-12, 32)
layout_mode = 2

[node name="DynamicLabel4" type="Label" parent="PauseMenu/TabContainer/World Properties"]
layout_mode = 2
text = "Background"
script = ExtResource("6_aufvl")
json_text = "ui/editor/background"

[node name="Background" type="Button" parent="PauseMenu/TabContainer/World Properties"]
layout_mode = 2
text = "(none)"

[node name="VersionLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -88.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 24.0
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 0.643137)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.384314)
theme_override_constants/outline_size = 4
text = "Tinybox beta 00.0.0"
horizontal_alignment = 2
vertical_alignment = 1
script = ExtResource("6_aufvl")
json_text = "Tinybox %version%"
raw_format = true

[node name="DynamicLabel2" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -141.0
offset_top = -24.0
offset_right = 141.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.552941)
theme_override_constants/outline_size = 6
text = "[ Number row: Select tools ] [ WASD, Space, Alt/Opt: Move ] [ (Ctrl/Cmd) + Scroll: Change zoom ] [ Shift: Speed up ]
Build tool: [ Click: Place ] [ Right click: Delete ] [ Q / E : Rotate ]"
horizontal_alignment = 1
script = ExtResource("6_aufvl")

[editable path="PauseMenu/TabContainer/World Properties/WaterHeightAdjuster"]
